--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,9 @@ p {
     font-size: 16px;
 }
 
-.hero {
+main::before {
+    content: " ";
+    display: block;
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
