added some notes to the css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,8 @@ section {
     margin-left: 25px;
 }
 
+/* The postioning, font, font colour, and background colour for each of the three article
+elements are coded for here. */
 .optimization-management-marketing {
     margin-bottom: 20px;
     padding: 50px;
